# damascus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
bench/: README.md  run.sh
bench/bcb/: analyze.py  driver.py
bench/bcb/results/: ablation.jsonl  damascus.jsonl  frontier.jsonl
bench/index/: build.py
bench/lcb/: analyze.py  driver.py  passk.py
bench/lcb/results/: concfix.jsonl  curated.jsonl  damascus.jsonl  dmsc_gemini.jsonl  frontier.jsonl  frontier2.jsonl  gjc_cmp.jsonl  gjc_gemini.jsonl  gjc_gemma31.jsonl  harness_cmp.jsonl  improved_final.jsonl  n32.jsonl  n32fix.jsonl  newpool.jsonl  reasonfirst.jsonl  vhard_damascus.jsonl  vhard_frontier.jsonl
bench/polyglot/: analyze.py  driver.py
bench/polyglot/results/: damascus.jsonl  frontier.jsonl  frontier_hard.jsonl
bench/results/: bench-20260621-101404.tsv
bench/swe/: run.py
bench/swe/results/: gold_subset.json  predictions_v2.jsonl  report_v2.json
bench/tasks/bugfix_median/: Cargo.toml  prompt.txt
bench/tasks/bugfix_median/src/: lib.rs
bench/tasks/fizzbuzz/: Cargo.toml  prompt.txt
bench/tasks/fizzbuzz/src/: lib.rs
bench/tasks/is_prime/: Cargo.toml  prompt.txt
bench/tasks/is_prime/src/: lib.rs
bench/tasks/merge_intervals/: Cargo.toml  prompt.txt
bench/tasks/merge_intervals/src/: lib.rs
bench/tasks/roman/: Cargo.toml  prompt.txt
bench/tasks/roman/src/: lib.rs
bench/tasks/stack/: Cargo.toml  prompt.txt
bench/tasks/stack/src/: lib.rs  stack.rs
bench/terminal/: driver.py  tasks.json
bench/terminal/results/: damascus.jsonl
docs/: AA_INDEX.md  ARCHITECTURE.md  EVALUATION.md  STRATEGIES.md  SWEBENCH.md
examples/is_prime/: Cargo.toml  README.md  damascus.toml
examples/is_prime/src/: lib.rs
src/: ast.rs  config.rs  context.rs  edits.rs  filter.rs  generate.rs  ledger.rs  lib.rs  main.rs  orchestrator.rs  plan.rs  prompts.rs  provider.rs  qa.rs  sandbox.rs  select.rs  slice.rs  tree.rs  ui.rs  verify.rs
tests/: fold_loop.rs
